dfir_rs/tests/compile-fail-stable/surface_syntax_paren_arrow.rs
../compile-fail/surface_syntax_paren_arrow.rs